Improve swagger information
